# binlab

./: CMakeLists.txt  LICENSE  README.md
include/binlab/: Config.h.in
include/binlab/BinaryFormat/: COFF.h  ELF.h
include/binlab/Config/: Config.h.in
include/binlab/Traits/: bin_traits.h  elf_traits.h  pe_traits.h
lib/BinaryFormat/COFF/: CMakeLists.txt  base_relocation.cpp  base_relocation.h  import_descriptor.h  resource_directory.cpp  resource_directory.h  section_header.cpp
test/binlab-bindump/: CMakeLists.txt
test/binlab-dumpbin/: CMakeLists.txt
tools/bindump/: Accessor.h  CMakeLists.txt  bin_iterator.h  elfdump.cpp  elfdump.h  iterator_facade.h  main.cpp  pedump.cpp  pedump.h  segments.h  symbols.h
tools/bindump/ELF/: elf_types.h  segments.h
tools/binlab-bindump/: CMakeLists.txt  iterator_facade.h  main.cpp
tools/binlab-dumpbin/: CMakeLists.txt  binlab-dumpbin.cpp  coffdump.cpp  coffdump.h  elfdump.cpp  elfdump.h  export_directory.cpp  export_directory.h  import_descriptor.cpp  pedump.cpp  resource_directory.cpp  resource_directory.h  section_header.h  symbols.h
tools/bl-dumpbin/: CMakeLists.txt  address_mode_policy.h  main.cpp
tools/bl-injector/: CMakeLists.txt  main.cpp
tools/bl-injector/payload/: CMakeLists.txt  payload.cpp
tools/elfdump/: CMakeLists.txt  elf_stream.cpp  elf_stream.h  elfdump.h  iterator_facade.h  main.cpp  sections.h  versioning.h
tools/pedump/: CMakeLists.txt  main.cpp
